--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -41,6 +41,22 @@ jobs:
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
 
+  build-publish-humble-workspace:
+    needs: create-new-ci-branch
+    runs-on: ubuntu-latest
+    name: Build and publish ROS2 humble workspace image
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Build and Push
+        uses: ./.github/actions/build-push
+        with:
+          workspace: ros2-ws
+          base_tag: humble
+          ci_branch: ${{ env.CI_BRANCH }}
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
   build-publish-galactic-control-libraries-devel:
     needs: build-publish-galactic-workspace
     runs-on: ubuntu-latest
@@ -69,6 +85,36 @@ jobs:
         with:
           hash: ${{ env.CL_DEVELOP_HASH }}
           file: ./control-libraries-develop-hash
+          ci_branch: ci
+
+  build-publish-humble-control-libraries-devel:
+    needs: build-publish-humble-workspace
+    runs-on: ubuntu-latest
+    name: Build and publish development ROS2 humble workspace image with control libraries installed
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Build and Push
+        uses: ./.github/actions/build-push
+        with:
+          workspace: ros2-control-libraries
+          base_tag: humble
+          cl_branch: develop
+          output_tag: humble-devel
+          ci_branch: ${{ env.CI_BRANCH }}
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get control libraries develop hash
+        run: |
+          HASH=$(git ls-remote https://github.com/epfl-lasa/control-libraries.git develop | awk '{ print $1 }')
+          echo "CL_DEVELOP_HASH=${HASH}" >> $GITHUB_ENV
+
+      - name: Write hash
+        uses: ./.github/actions/write-hash
+        with:
+          hash: ${{ env.CL_DEVELOP_HASH }}
+          file: ./control-libraries-humble-develop-hash
           ci_branch: ci
 
   build-publish-galactic-control-libraries:
@@ -129,6 +175,35 @@ jobs:
           file: ./modulo-develop-hash
           ci_branch: ci
 
+  build-publish-humble-modulo-devel:
+    needs: build-publish-humble-control-libraries-devel
+    runs-on: ubuntu-latest
+    name: Build and publish development ROS2 humble workspace image with modulo installed
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Build and Push
+        uses: ./.github/actions/build-push
+        with:
+          workspace: ros2-modulo
+          base_tag: humble-devel
+          modulo_branch: develop
+          ci_branch: ${{ env.CI_BRANCH }}
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get modulo develop hash
+        run: |
+          HASH=$(git ls-remote https://github.com/epfl-lasa/modulo.git develop | awk '{ print $1 }')
+          echo "MODULO_DEVELOP_HASH=${HASH}" >> $GITHUB_ENV
+
+      - name: Write hash
+        uses: ./.github/actions/write-hash
+        with:
+          hash: ${{ env.MODULO_DEVELOP_HASH }}
+          file: ./modulo-humble-develop-hash
+          ci_branch: ci
+
   build-publish-galactic-modulo:
     needs: build-publish-galactic-control-libraries
     runs-on: ubuntu-latest
@@ -161,7 +236,7 @@ jobs:
   build-publish-galactic-modulo-control-devel:
     needs: build-publish-galactic-modulo-devel
     runs-on: ubuntu-latest
-    name: Build and publish ROS2 galactic workspace image with modulo and ros2 control installed
+    name: Build and publish development ROS2 galactic workspace image with modulo and ros2 control installed
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -171,6 +246,22 @@ jobs:
         with:
           workspace: ros2-modulo-control
           base_tag: galactic-devel
+          ci_branch: ${{ env.CI_BRANCH }}
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
+  build-publish-humble-modulo-control-devel:
+    needs: build-publish-humble-modulo-devel
+    runs-on: ubuntu-latest
+    name: Build and publish ROS2 humble workspace image with modulo and ros2 control installed
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Build and Push
+        uses: ./.github/actions/build-push
+        with:
+          workspace: ros2-modulo-control
+          base_tag: humble-devel
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
 
